<resources>
    <string name="app_name">Heart Rate Monitoring App</string>
    <string name="title_home">Home</string>
    <string name="title_band">Band</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="password_not_valid">Password tidak valid</string>
    <string name="name_cannot_empty">Nama tidak boleh kosong</string>
    <string name="password_not_same">Password yang dimasukkan tidak sama</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="success_change_profile">Berhasil mengubah profil</string>
    <string name="logout_failed">Logout Gagal</string>
    <string name="connecting">Menghubungkan</string>
    <string name="step">Langkah</string>
    <string name="step_title">Langkah hari ini</string>
    <string name="change_password">Ubah password</string>
    <string name="change_profile">Ubah profil</string>
    <string name="have_no_account">Belum memiliki akun?</string>
    <string name="register">Daftar</string>
    <string name="already_have_account">Sudah memiliki akun?</string>
    <string name="login">Masuk</string>
    <string name="connect_device">Hubungkan perangkat</string>
    <string name="app_tittle">Aplikasi Monitoring</string>
    <string name="heart_rate">Detak jantung</string>
    <string name="bpm">BPM</string>
    <string name="background_monitoring">Monitoring latar belakang</string>
    <string name="live_monitoring">Monitoring langsung</string>
    <string name="monitoring_period">Periode monitoring</string>
    <string name="heart_rate_limit">Batas detak jantung</string>
    <string name="old_password">Password lama</string>
    <string name="new_password">Password baru</string>
    <string name="retype_password">Masukkan ulang password baru</string>
    <string name="save">Simpan</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="date_of_birth">Tanggal lahir</string>
    <string name="loading">Memuat</string>
    <string name="password">Password</string>
    <string name="band_not_detected">Tidak terdeteksi smartband yang terhubung. Silahkan menghubungkan smartband melalui aplikasi Mi Fit atau Zepp Life</string>
    <string name="connect">Hubungkan</string>
    <string name="logout">Keluar</string>
    <string name="detected_devices">Perangkat Tersedia</string>
    <string name="search">Cari</string>
    <string name="stop">Berhenti</string>
    <string name="live_monitoring_title">Monitoring langsung</string>
    <string name="power_dialog">Agar dapat melakukan monitoring latar belakang aplikasi membutuhkan anda untuk menonaktifkan pengoptimalan daya. Nonaktifkan pengoptimalan daya?</string>
    <string name="send">Kirim</string>
    <string name="submit">Kirim</string>
    <string name="anomaly_detected">Terdeteksi anomali pada detak jantung anda</string>
    <string name="doing_activities_question">Apakah anda melakukan salah satu dari aktivitas di bawah ini?</string>
    <string name="select_activities">Pilih semua aktivitas yang anda lakukan</string>
    <string name="enter_label">Masukan label</string>
    <string name="add_label_question">Apakah anda ingin menambahkan label pada aktivitas ini?</string>
    <string name="make_movement_question">Apakah anda bergerak?</string>
    <string name="today_average_heart_rate">Rata - rata hari ini: %1$s BPM</string>
    <string name="today_step">Total langkah hari ini:</string>
    <string name="contact">Kontak</string>
    <string name="contact_title">Kontak</string>
    <string name="add_contact">Tambah kontak</string>
    <string name="enter_name">Masukkan nama</string>
    <string name="contact_empty">Anda belum menambahkan kontak</string>
    <string name="height">Tinggi badan</string>
    <string name="weight">Berat badan</string>
    <string name="delete_contact_promp">Apakah anda yakin ingin menghapus kontak?</string>
    <string name="calibrate_heart_rate">Kalibrasi detak jantung</string>
    <string name="disclaimer_calibrate">Anda akan melakukan kalibrasi detak jantung. Hal ini dilakukan agar kami dapat mendapatkan baseline aktivitas detak jantung anda. Kalibrasi dulakukan dengan melakukan dua aktivitas yaitu duduk dan berjalan.</string>
    <string name="start">Mulai</string>
    <string name="start_calibration_activity">Mulai kalibrasi aktivitas %1$s?</string>
    <string name="start_calibration">Mulai kalibrasi?</string>
    <string name="calibration_detail">Anda diharap untuk melakukan %1$s selama %2$s menit. Selama melakukan kalibrasi anda diharapkan untuk tidak melakukan aktivitas lainya.</string>
    <string name="calibration_title">Kalibrasi aktivitas %1$s</string>
    <string name="background_monitoring_undergoing">Monitoring latar belakang sedang berjalan</string>
    <string name="background_monitoring_content">Detak jantung: %1s, Langkah: %2s</string>
    <string name="emergency_button_hint">Tekan tombol untuk kondisi darurat</string>
    <string name="emergency_message_success">Berhasil mengirimkan pesan darurat</string>
    <string name="last_condition">Kondisi terakhir: %1$s</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="show_contact_data_title">Data %1$s</string>
    <string name="delete">Hapus</string>
    <string name="add">Tambah</string>

    <string-array name="periods">
        <item>1 menit</item>
        <item>5 menit</item>
        <item>10 menit</item>
        <item>15 menit</item>
    </string-array>

    <string-array name="genders">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>

</resources>