<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_email"
        style="@style/OutlinedEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tidt_email"
            android:hint="@string/email"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_outline_email"
            android:drawablePadding="16dp"
            android:textAppearance="@style/FormTextAppearance"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        style="@style/OutlinedEditText"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tidt_password"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_outline_vpn_key"
            android:drawablePadding="16dp"
            android:maxLength="20"
            android:textAppearance="@style/FormTextAppearance"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null" />

</LinearLayout>